--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,7 +5,7 @@ description = "Library for authenticating and connecting to Google Drive"
 authors = ["Gustav Rasmussen"]
 license = "MIT"
 packages = [
-    { include = "src/python" },
+    { include = "key_master" },
 ]
 repository = "https://github.com/TheNewThinkTank/key-master"
 keywords = ["google-drive", "authentication", "library"]
@@ -14,10 +14,10 @@ keywords = ["google-drive", "authentication", "library"]
 # pydantic = "^2.10.4"
 python = "^3.11"
 icecream = "^2.1.3"
+gspread = "^6.1.4"
 google-api-python-client = "^2.156.0"
 google-auth-httplib2 = "^0.2.0"
 google-auth-oauthlib = "^1.2.1"
-gspread = "^6.1.4"
 # python-dotenv = "^1.0.1"
 sphinx-rtd-theme = "^3.0.2"
 
@@ -31,7 +31,7 @@ ruff = "^0.8.4"
 mypy = "^1.14.0"
 
 [tool.pytest.ini_options]
-pythonpath = "src:src/python"
+pythonpath = "python:python/key_master"
 
 [tool.poetry.extras]
 docs = ["sphinx", "sphinx_rtd_theme"]
